# robotics-sim-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_test_discovery.json
.github/workflows/: ci.yml
config/: gains.json
sim/: requirements.txt  visualize.py
src/: cli.h  main.cpp  pid.h  robot.cpp  robot.h  sensors.cpp  sensors.h  telemetry.cpp  telemetry.h
tests/: kinematics_tests.cpp  pid_tests.cpp
